--- a/proposed/spec-draft-sprint-day-2.yaml
+++ b/proposed/spec-draft-sprint-day-2.yaml
@@ -1,23 +1,18 @@
 swagger: '2.0'
 info:
-  title: >-
-    A Proposed Imagery Catalog API using the OGC WFS 3.0 standard as a starting
-    point
+  title: A Proposed Imagery Catalog API using the OGC WFS 3.0 standard as a starting point
   version: 0.0.2
   description: >-
-    This document is a proposal draft. Though it is the first one in this folder
-    it is by no means the only one. If others are contributed they will all be
-    considered equally on Day 1 of the Imagery Catalog API Sprint. This is
-    simply the first one proposed. If you have additional ideas feel free to
-    either fork this and propose Pull Requests, or create your own new
-    spec-draft and add to this folder.
-
-
+    This document is a proposal draft. Though it is the first one in this folder it is by no means the only one. If others are
+    contributed they will all be considered equally on Day 1 of the Imagery Catalog API Sprint. This is simply the first one proposed.
+    If you have additional ideas feel free to either fork this and propose Pull Requests, or create your own new spec-draft and add to this folder.
+    
+    
     WARNING - THIS IS WORK IN PROGRESS.
+    
+    
+    WARNING - This is a Swagger / OpenAPI 2.0 variant. A final spec should be in OpenAPI 3.0, but this is used for quick code generation purposes.
 
-
-    WARNING - This is a Swagger / OpenAPI 2.0 variant. A final spec should be in
-    OpenAPI 3.0, but this is used for quick code generation purposes.
   contact:
     name: Acme Corporation
     email: info@example.org
@@ -69,19 +64,21 @@ paths:
   /features:
     get:
       summary: Retrieve features matching filters
-      description: Description goes here
+      description: >- 
+        Description goes here
       operationId: getFeatures
       tags:
         - Items
       parameters:
         - $ref: '#/parameters/bbox'
-        - $ref: '#/parameters/schema'
+        - $ref: '#/parameters/schema' 
         - $ref: '#/parameters/time'
       produces:
         - application/geo+json
       responses:
         '200':
-          description: Description here
+          description: >-
+            Description here
           schema:
             $ref: '#/definitions/FeatureCollection'
         default:
@@ -97,7 +94,8 @@ paths:
         - application/geo+json
       responses:
         '200':
-          description: Description here
+          description: >-
+            Description here
           schema:
             $ref: '#/definitions/FeatureCollection'
         default:
@@ -127,57 +125,38 @@ paths:
           description: An error occured.
           schema:
             $ref: '#/definitions/exception'
-  /schema:
+  /schemas:
     get:
-      summary: Retreive types
-      description: List all possible item types.
-      operationId: getTypes
-      tags:
-        - Types
-      produces:
-        - application/geo+json
+      summary: Get list of schemas
+      operationId: getSchemas
       responses:
         '200':
-          description: >-
-            Information about the feature collection plus the first features
-            matching the selection parameters.
+          description: Successful schema
           schema:
-            $ref: '#/definitions/typeCollection'
-        default:
-          description: An error occured.
-          schema:
-            $ref: '#/definitions/exception'
-  '/schmea/{id}':
+            type: object
+            additionalProperties:
+              $ref: '#/definitions/Schema'
+  '/schemas/{schemaId}':
     get:
-      summary: Retreive a type
-      description: Return the description of a type given its id.
-      operationId: getType
-      tags:
-        - Types
+      summary: Get schemas
+      operationId: getSchemaById
       parameters:
-        - $ref: '#/parameters/id'
-      produces:
-        - application/geo+json
+        - name: schemaId
+          in: path
+          required: true
+          type: string
       responses:
         '200':
-          description: A type.
+          description: Successful resposne
           schema:
-            $ref: '#/definitions/type'
-        '404':
-          description: 'The feature with id {id} does not exist.'
-          schema:
-            $ref: '#/definitions/exception'
-        default:
-          description: An error occured.
-          schema:
-            $ref: '#/definitions/exception'
+            $ref: '#/definitions/Schema'
 parameters:
   time:
     name: time
     type: array
     description: Adheres to RFC3339
     items:
-      type: string
+      type: string   
     in: query
   bbox:
     name: bbox
@@ -226,7 +205,8 @@ definitions:
           - 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
         default: 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
       bbox:
-        description: 'West, South, East, North'
+        description: >-
+          West, South, East, North
         type: array
         items:
           minItems: 4
@@ -381,6 +361,282 @@ definitions:
     enum:
       - image
       - related-images
+  Schema:
+    additionalProperties:
+      $ref: '#/definitions/SchemaItem'
+  SchemaItem:
+    required:
+      - type
+    properties:
+      description:
+        $ref: '#/definitions/SchemaDescription'
+      constraint:
+        $ref: '#/definitions/SchemaPropertyConstraints'
+      type:
+        $ref: '#/definitions/SchemaPropertyType'
+  SchemaDescription:
+    required:
+      - title
+    properties:
+      title:
+        type: string
+        description: 'Title of this dimension, normally used for display to a human'
+      uom:
+        type: string
+        description: Units of Measure
+      unitsSymbol:
+        type: string
+        description: Symbol of the units
+      keywords:
+        type: array
+        description: >-
+          Unordered list of one or more commonly used or formalised word(s) or
+          phrase(s) used to describe this type
+        items:
+          type: string
+  SchemaPropertyConstraints:
+    type: object
+    externalDocs:
+      url: >-
+        https://tools.ietf.org/html/draft-fge-json-schema-validation-00#section-5
+      description: Derived from Json/Swagger schema
+    properties:
+      maximum:
+        type: number
+      exclusiveMaximum:
+        type: boolean
+      minimum:
+        type: number
+      exclusiveMinimum:
+        type: boolean
+      maxLength:
+        type: integer
+      minLength:
+        type: integer
+      pattern:
+        type: string
+      maxItems:
+        type: integer
+      minItems:
+        type: integer
+      uniqueItems:
+        type: boolean
+      multipleOf:
+        type: number
+  SchemaPropertyType:
+    type: string
+    enum:
+      - String
+      - Text
+      - Int32
+      - Int64
+      - Double
+      - Time
+      - StringSet
+      - Int64Set
+      - TimeRange
+      - Int64Range
+      - DoubleRange
+      - Doc
+      - Geo
+    description: |
+      * `String` -  A text string
+      * `Text` - A text string with text-search index
+      * `Int32` - 32-bit integer
+      * `Int64` - 64-bit integer
+      * `Double` -  IEEE double-precision floating-point Number
+      * `Time` - A timestamp with millisecond precision
+      * `StringSet` -  A set made of text entities
+      * `Int64Set` - A set made of 64-bit integer
+      * `TimeRange` - A time range with begin and end
+      * `Int64Range` - A integer range with begin and end
+      * `DoubleRange` - A floating-point range with begin and end
+      * `Doc` - Arbitrary Document
+      * `Geo` - Geojson geometry
+  Time:
+    type: integer
+    format: int64
+    description: UTC Timestamp with millisecond precision
+    minimum: 0
+  StringSet:
+    type: array
+    items:
+      type: string
+  Int64Set:
+    type: array
+    items:
+      type: integer
+      format: int64
+  TimeRange:
+    description: begin and end UTC timestamps with millisecond precision
+    properties:
+      begin:
+        type: integer
+        format: int64
+        minimum: 0
+      end:
+        type: integer
+        format: int64
+        minimum: 0
+  Int64Range:
+    description: An integer range with begin and end
+    properties:
+      begin:
+        type: integer
+        format: int64
+      end:
+        type: integer
+        format: int64
+  DoubleRange:
+    description: A double range with begin and end
+    properties:
+      begin:
+        type: number
+        format: double
+      end:
+        type: number
+        format: double
+  Doc:
+    description: Arbitrary json document
+    additionalProperties:
+      type: object
+  GeoJson:
+    description: root geojson object
+    properties:
+      type:
+        $ref: '#/definitions/FeatureType'
+    required:
+      - type
+    discriminator: type
+  FeatureType:
+    type: string
+    enum:
+      - Point
+      - MultiPoint
+      - LineString
+      - MultiLineString
+      - Polygon
+      - MultiPolygon
+      - GeometryCollection
+      - Feature
+      - FeatureCollection
+  GeometryCollection:
+    allOf:
+      - $ref: '#/definitions/GeoJson'
+      - type: object
+        properties:
+          geometries:
+            $ref: '#/definitions/GeometryCollection2D'
+        required:
+          - geometries
+  MultiPolygon:
+    allOf:
+      - $ref: '#/definitions/GeoJson'
+      - type: object
+        properties:
+          coordinates:
+            $ref: '#/definitions/MultiPolygon2D'
+        required:
+          - coordinates
+  MultiLineString:
+    allOf:
+      - $ref: '#/definitions/GeoJson'
+      - type: object
+        properties:
+          coordinates:
+            $ref: '#/definitions/MultiLineString2D'
+        required:
+          - coordinates
+  MultiPoint:
+    allOf:
+      - $ref: '#/definitions/GeoJson'
+      - type: object
+        properties:
+          coordinates:
+            $ref: '#/definitions/MultiPoint2D'
+        required:
+          - coordinates
+  Polygon:
+    allOf:
+      - $ref: '#/definitions/GeoJson'
+      - type: object
+        properties:
+          coordinates:
+            $ref: '#/definitions/Polygon2D'
+        required:
+          - coordinates
+  LineString:
+    allOf:
+      - $ref: '#/definitions/GeoJson'
+      - type: object
+        properties:
+          coordinates:
+            $ref: '#/definitions/LineString2D'
+        required:
+          - coordinates
+  Point:
+    allOf:
+      - $ref: '#/definitions/GeoJson'
+      - type: object
+        properties:
+          coordinates:
+            $ref: '#/definitions/Point2D'
+        required:
+          - coordinates
+  GeoPolygon2D:
+    description: A geojson 2d polygon
+    type: object
+    properties:
+      type:
+        description: Type of geometry
+        type: string
+        enum:
+          - Polygon
+      coordinates:
+        $ref: '#/definitions/Polygon2D'
+    required:
+      - type
+      - coordinates
+  GeometryCollection2D:
+    type: array
+    items:
+      $ref: '#/definitions/GeoJson'
+  MultiPolygon2D:
+    type: array
+    items:
+      $ref: '#/definitions/Polygon2D'
+  Polygon2D:
+    type: array
+    minItems: 1
+    items:
+      $ref: '#/definitions/LinearRing2D'
+  MultiLineString2D:
+    type: array
+    items:
+      $ref: '#/definitions/LineString2D'
+  LinearRing2D:
+    type: array
+    minItems: 4
+    items:
+      $ref: '#/definitions/Point2D'
+  LineString2D:
+    type: array
+    minItems: 2
+    items:
+      $ref: '#/definitions/Point2D'
+  MultiPoint2D:
+    type: array
+    minItems: 2
+    items:
+      $ref: '#/definitions/Point2D'
+  Point2D:
+    description: A 2d geojson point
+    type: array
+    minimum: 2
+    maximum: 2
+    items:
+      type: number
+      format: double
 tags:
   - name: Capabilities
     description: >-
