--- a/proposed/spec-draft-sprint-day-2.yaml
+++ b/proposed/spec-draft-sprint-day-2.yaml
@@ -32,7 +32,7 @@ paths:
       tags:
         - Capabilities
       produces:
-        - application/openapi+json;version=2.0
+        - application/json
       responses:
         '200':
           description: >-
@@ -57,6 +57,7 @@ paths:
         - $ref: '#/parameters/schema' 
         - $ref: '#/parameters/time'
         - $ref: '#/parameters/filter'
+        - $ref: '#/parameters/limit'
       produces:
         - application/geo+json
       responses:
@@ -139,13 +140,19 @@ paths:
           schema:
             $ref: '#/definitions/Schema'
 parameters:
+  limit:
+    name: limit
+    in: query
+    type: integer
+    description: Defines the maximum number or results retruned by the API
   time:
     name: time
     type: array
     description: Adheres to RFC3339
     items:
-      type: string   
+      type: string  
     in: query
+    collectionFormat: csv
   bbox:
     name: bbox
     in: query
@@ -213,51 +220,6 @@ definitions:
           - -90
           - 180
           - 90
-  content:
-    type: object
-    required:
-      - collections
-    properties:
-      collections:
-        type: array
-        items:
-          $ref: '#/definitions/collectionInfo'
-  collectionInfo:
-    type: object
-    required:
-      - name
-      - links
-    properties:
-      name:
-        type: string
-        example: address
-      title:
-        type: string
-        example: address
-      description:
-        type: string
-        example: An address.
-      links:
-        type: array
-        items:
-          $ref: '#/definitions/link'
-        example:
-          - href: 'http://data.example.com/imagery'
-            rel: item
-          - href: 'http://example.com/concepts/imagery.html'
-            rel: describedBy
-            type: text/html
-      extent:
-        $ref: '#/definitions/bbox'
-      crs:
-        description: The coordinate reference system. This is set to be LongLat (CRS84).
-        type: array
-        items:
-          type: string
-        default:
-          - 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
-        example:
-          - 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
   link:
     type: object
     required:
@@ -288,34 +250,6 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/Feature'
-  typeCollection:
-    type: object
-    required:
-      - items
-    properties:
-      items:
-        type: array
-        items:
-          $ref: '#/definitions/type'
-  geometry:
-    type: object
-    required:
-      - type
-    properties:
-      type:
-        type: string
-        enum:
-          - Polygon
-      coordinates:
-        type: array
-        items:
-          type: array
-          items:
-            type: array
-            minItems: 4
-            items:
-              type: number
-              minItems: 2
   Feature:
     type: object
     required:
@@ -331,20 +265,9 @@ definitions:
         description: 'unique ID, potentially link to file'
       bbox:
         $ref: '#/definitions/bbox'
-        description: >-
-          Pair of min and max coordinates in CRS units, (min_x, min_y, max_x,
-          max_y)
-        example: '[-180,-90,180,90]'
       geometry:
-        $ref: '#/definitions/geometry'
-        description: Describing the actual footprint of the imagery
-        example: 'POLYGON((-180 -90, -180 90, 180 90, 180 -90, -180 -90))'
-      title:
-        type: string
-        example: A scene from some satellite
-        description: >-
-          scene title from provider of image. Can be the ID of the image
-          provider
+        type: object
+        description: footprint of the feature
       type:
         type: string
         description: The GeoJSON type
@@ -357,30 +280,20 @@ definitions:
         $ref: '#/definitions/properties'
   properties:
     type: object
+    required:
+      - id
+      - start_date
+      - end_date
     description: >-
       provides the core metatdata fields plus extensions
-      
     properties:
       id:
         type: string
         description: Provider ID for that item
-        example: id
-      title:
-        type: string
-        description: human readable name of the item
-      bbox:
-        $ref: '#/definitions/bbox'
-        description: Pair of min and max coordinates in CRS units, (min_x, min_y,max_x, max_y)
-        example: '[-180,-90,180,90]'
       start_date:
-        type: string
-        description: First date/time in UTC (Combined date and time representation)
+        $ref: '#/definitions/Time'
       end_date:
-        type: string
-        description:  Last date/time in UTC (Combined date and time representation)
-      product_type:
-        type: string
-        description: Product types - [eo, sar, model, point-cloud, video]
+        $ref: '#/definitions/Time'
       provider:
         type: string
         description: Information about the provider
@@ -388,17 +301,17 @@ definitions:
         type: string
         description: Data license name based on SPDX License List
       links:
-        type: array
-        items:
-          type: string
-      version:
+        $ref: '#/definitions/links'
+  links:
+    type: object
+    required:
+      - self
+      - thumbnail
+    properties:
+      self:
         type: string
-        description: The version of the imagery metadata fields, for testing/validation
-  type:
-    type: string
-    enum:
-      - image
-      - related-images
+      thumbnail:
+        type: string
   Schema:
     additionalProperties:
       $ref: '#/definitions/SchemaItem'
@@ -492,10 +405,8 @@ definitions:
       * `Doc` - Arbitrary Document
       * `Geo` - Geojson geometry
   Time:
-    type: integer
-    format: int64
-    description: UTC Timestamp with millisecond precision
-    minimum: 0
+    type: string
+    description: Adheres to RFC3339
   StringSet:
     type: array
     items:
@@ -506,16 +417,12 @@ definitions:
       type: integer
       format: int64
   TimeRange:
-    description: begin and end UTC timestamps with millisecond precision
+    description: begin and end timestamps adhering to RFC3339
     properties:
       begin:
-        type: integer
-        format: int64
-        minimum: 0
+        type: string
       end:
-        type: integer
-        format: int64
-        minimum: 0
+        type: string
   Int64Range:
     description: An integer range with begin and end
     properties:
