changed spec from items to features so that it is a real geojson feature collection to be read by all software - thanks @joshfix and @tomkralidis

--- a/api-spec/spec.yaml
+++ b/api-spec/spec.yaml
@@ -216,14 +216,14 @@ definitions:
   ItemCollection:
     type: object
     required:
-      - items
+      - features
       - type
     properties:
       type:
         type: string
         enum:
-          - ItemCollection
-      items:
+          - FeatureCollection
+      features:
         type: array
         items:
           $ref: '#/definitions/Item'
