--- a/api-spec/spec.yaml
+++ b/api-spec/spec.yaml
@@ -66,7 +66,10 @@ paths:
       tags:
         - Items
       parameters:
-        - $ref: '#/parameters/bbox'
+        - $ref: '#/parameters/xmin'
+        - $ref: '#/parameters/ymin'
+        - $ref: '#/parameters/xmax'
+        - $ref: '#/parameters/ymax'
         - $ref: '#/parameters/time'
         - $ref: '#/parameters/filter'
         - $ref: '#/parameters/limit'
@@ -95,7 +98,7 @@ paths:
         - application/geo+json
       responses:
         '200':
-          description: >-
+          description:
             Returns a pageable GeoJSON feature collection of the items matching
             the query
           schema:
@@ -143,28 +146,47 @@ parameters:
     type: array
     description:
       An array of date-time strings that adheres to RFC3339 (for example
-      1985-04-12T23:20:50.52Z). One date-time in the array is the time to match.
-      Two date-times represent a range. Any additional items in the array will
+      1985-04-12T23:20:50.52Z). One date-time in the array is the time to match.  Two date-times represent a range. Any additional items in the array will
       be ignored.
     items:
       type: string
     in: query
-    collectionFormat: csv
-  bbox:
-    name: bbox
+  xmin:
+    name: xmin
     in: query
     description:
-      Only items that have a geometry that intersects the bounding box are
-      selected. The bounding box is provided as four numbers, in longitude &
-      latitude North, West, South, East
-    type: array
-    items:
-      type: number
-      minItems: 4
-      maxItems: 4
-      minimum: -180
-      maximum: 180
-    collectionFormat: csv
+      The minimum longitudinal arc value.
+    required: true
+    type: number
+    minimum: -180
+    maximum: 180
+  ymin:
+    name: ymin
+    in: query
+    description:
+      The minimum latitudinal parallel value.
+    required: true
+    type: number
+    minimum: -90
+    maximum: 90
+  xmax:
+    name: xmax
+    in: query
+    description:
+      The maximum longitudinal arc value.
+    required: true
+    type: number
+    minimum: -180
+    maximum: 180
+  ymax:
+    name: ymax
+    in: query
+    description:
+      The maximum latitudinal parallel value.
+    required: true
+    type: number
+    minimum: -90
+    maximum: 90
   filter:
     name: filter
     in: query
@@ -188,20 +210,6 @@ definitions:
         type: string
       description:
         type: string
-  bbox:
-    description: 'West, South, East, North'
-    type: array
-    items:
-      minItems: 4
-      maxItems: 4
-      type: number
-      minimum: -180
-      maximum: 180
-    example:
-      - -180
-      - -90
-      - 180
-      - 90
   link:
     type: object
     required:
@@ -261,8 +269,6 @@ definitions:
         type: string
         example: path/to/example.tif
         description: 'unique ID, potentially link to file'
-      bbox:
-        $ref: '#/definitions/bbox'
       geometry:
         type: object
         description: footprint of the item
