updates to align responses with latest item json

--- a/api-spec/wfs-stac.yaml
+++ b/api-spec/wfs-stac.yaml
@@ -495,10 +495,14 @@ definitions:
         license: CC-BY-4.0
       links:
         - rel: self
-          href: 'http://cool-sat.com/catalog/CS3-20160503_132130_04/CS3-20160503_132130_04.json'
+          href: http://cool-sat.com/catalog/CS3-20160503_132130_04/CS3-20160503_132130_04.json
       assets:
-        - name: thumbnail
+        analytic:
+          name: 4-Band Analytic
           href: relative-path/to/analytic.tif
+        thumbnail: 
+          name: thumbnail
+          href: 'http://thumbnails.com/1.png'
   ItemProperties:
     type: object
     required:
