--- a/api-spec/spec.yaml
+++ b/api-spec/spec.yaml
@@ -18,8 +18,6 @@ info:
     WARNING - THIS IS WORK IN PROGRESS. Implementations are encouraged, but
     please give feedback on github.
 
-    TODO - Update responses to be in line with static catalogs, give example
-
     TODO - Add in schema responses
 
     TODO - Explain extensibility, how to return different content & operations
@@ -299,18 +297,19 @@ definitions:
             - - -122.308150179
               - 37.488035566
       properties:
-        start: '2016-05-03T13:21:30.040Z'
-        end: '2016-05-03T13:21:30.410Z'
+        datetime: '2016-05-03T13:21:30.040Z'
         provider: 'http://www.cool-sat.com'
         license: CC-BY-4.0
       links:
         - rel: self
-          href: 'http://cool-sat.com/catalog/CS3-20160503_132130_04/CS3-20160503_132130_04.json'
+          href: http://cool-sat.com/catalog/CS3-20160503_132130_04/CS3-20160503_132130_04.json
       assets:
-        - name: 4-Band Analytic
+        analytic:
+          name: 4-Band Analytic
           href: relative-path/to/analytic.tif
-        - name: thumbnail
-          href: http://thumbnails.com/1.png
+        thumbnail: 
+          name: thumbnail
+          href: 'http://thumbnails.com/1.png'
   ItemProperties:
     type: object
     required:
