Changing bbox to be an array of numbers
I was trying to do a ref to the bbox schema, but it looks like swagger 2.0 doesn't allow that. I think openapi 3 does though.

--- a/api-spec/wfs-stac.yaml
+++ b/api-spec/wfs-stac.yaml
@@ -168,7 +168,13 @@ paths:
           description: The id of the collection
         - name: bbox
           in: query
-          type: string
+          type: array
+          items:
+            minItems: 4
+            maxItems: 4
+            type: number
+            minimum: -180
+            maximum: 180
           description: >-
             This should be an array matching the format from the /search/STAC POST definition.
             ex. ?bbox=[-180, -90, 180, 90]
